--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
 	--color: #333333 ;
 	--color-meta: #808080 ;
  
-	--pitch-line-color: #808080 ;
-	--pitch-shade-color: #808080 ;
+	--pitch-line-color: #ffffff ;
+	--pitch-shade-color: #ffffff ;
 }
  
 .dark-theme {
@@ -35,7 +35,7 @@
   }
 }
 
-.tooltip {
+/* .tooltip {
   font-family: "Open Sans";
   position: absolute;
   background: #fff;
@@ -45,70 +45,65 @@
   transform: translateX(20px) translateY(0%) translateY(-14px);
   opacity: 0;
   display: flex;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, .16);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, .16); */
 
-  table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    background-color: #fff;
-    empty-cells: show;
-    -webkit-box-shadow: 7px 7px 12px -9px #777;
-    -moz-box-shadow: 7px 7px 12px -9px #777;
-    box-shadow: 7px 7px 12px -9px #777;
-    opacity: .9;
-    th {
-      background-color: #aaa;
-      font-size: 14px;
-      padding: 2px 5px;
-      text-align: left;
-      color: #FFF;
-    }
-    tr {
-      border: 1px solid #CCC;
-    }
-    td {
-      font-size: 13px;
-      padding: 3px 6px;
-      background-color: #fff;
-      border-left: 1px dotted #999;
-    }
+  
+
+
+
+
+/* index html style */
+
+#field {
+  width: 1200px;
+  height: 900px;
+  position: relative;
+  & svg{
+    position: relative;
+  background-color: #00aa00; /* Cambiar a color verde */
+
   }
 }
 
-.header {
-  .h1 {
-    font-size: 32px;
-    fill: var( --color );
-  }
-  .h2 {
-    font-size: 21px;
-    fill: var( --color-meta );
-  }
-  .circle {
-    stroke: var( --color-meta );
-  }
+.goalpost {
+  fill: white;
 }
 
-.actions_table {
-  font-size: .8em;
-  :last-child {
-    margin-bottom: 0;
-  }
+.player {
+  fill: yellow;
+}
 
-  table {
-    border-collapse: collapse;
-    background-color: transparent;
-    th {
-      padding: 8px 5px;
-      line-height: 1.625;
-      vertical-align: bottom;
-      border-bottom: 2px solid #d8d9da;
-    }
-    td {
-      padding: 8px 5px;
-      line-height: 1.625;
-      vertical-align: top;
-      border-top: 1px solid #ededed;
-    }
-  }
+.opponent {
+  fill: red;
+}
+
+.field-line {
+  stroke: white;
+  stroke-width: 2;
+}
+
+.center-circle {
+  fill: transparent;
+  stroke: white;
+  stroke-width: 2;
+}
+.player-number {
+  fill: white;
+  font-size: 3px; /* Aumentar el tamaño del número */
+  text-anchor: middle;
+  dominant-baseline: central;
+}
+/* .tooltip {
+  position: absolute;
+  padding: 8px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  font-size: 12px;
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.2s;
+} */
+.player-hover,
+.opponent-hover {
+  fill: orange; /* Cambiar el color al hacer hover */
 }
