--- a/src/index.css
+++ b/src/index.css
@@ -7,22 +7,14 @@
 	--pitch-shade-color: #ffffff ;
 }
  
-.dark-theme {
-	--background-color: #162939 ;
-	--color: #43FCD5 ;
-	--color-meta: #f3efef ;
- 
-	--pitch-line-color: #cccccc ;
-	--pitch-shade-color: #cccccc ;
-}
- 
-.light-theme {
 
-}
+ 
+
 
 :root {
 	background-color: var( --background-color );
   font-family: "Open Sans";
+
 }
 
 .pitch {
@@ -35,29 +27,14 @@
   }
 }
 
-/* .tooltip {
-  font-family: "Open Sans";
-  position: absolute;
-  background: #fff;
-  pointer-events: none;
-  z-index: 6;
-  align-items: center;
-  transform: translateX(20px) translateY(0%) translateY(-14px);
-  opacity: 0;
-  display: flex;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, .16); */
-
-  
-
-
-
-
-/* index html style */
 
 #field {
-  width: 1200px;
+  width: 100%;
   height: 900px;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   & svg{
     position: relative;
   background-color: #00aa00; /* Cambiar a color verde */
@@ -83,21 +60,11 @@
 }
 .player-number {
   fill: white;
-  font-size: 2px; /* Aumentar el tamaño del número */
+  font-size: 2px; 
   text-anchor: middle;
-  dominant-baseline: central;
 }
-/* .tooltip {
-  position: absolute;
-  padding: 8px;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: white;
-  font-size: 12px;
-  pointer-events: none;
-  opacity: 0;
-  transition: opacity 0.2s;
-} */
+
 .player-hover,
 .opponent-hover {
-  fill: orange; /* Cambiar el color al hacer hover */
+  fill: orange; 
 }
